# zso-zad1

./: .clang-format  .gitignore  .gitmodules  Makefile  README.rst  check.py
checklib/: __init__.py  elf.py  primitives.py  spec.py  utils.py
examples/: _io_impl.c  a.c  b.c  c.c  iotbench.c  min.S  min_got.S  min_got_harder.S  min_libc_constructors.c  min_libc_plt.c  min_plt.S  question.c  tricky.c  tricky_part1.S
examples/IoTBench/: Makefile  README.md  benchmark.h  conv.c  list_search_sort.c  main.c  matrix.c  type.h
include/: _syscalls_impl.h
picolibc/: .gitignore  README.rst  crt0.c  picolibc-quarkish-linux-none.txt  picolibc_syscalls.c
picolibc/iamcu/include/: picolibc.h
replacements/: cheating_rdtsc.s  cheating_rdtsc.source.c  exit123.s  mock_simulated_getc_nodata.S  return0.s  return_for_libedn.s
solution/: CMakeLists.txt  Makefile  README  solution_spec.yaml
solution/dependencies/LIEF/lib/pkgconfig/: LIEF.pc
solution/dependencies/LIEF/share/LIEF/cmake/: LIEFExport-shared.cmake  LIEFExport-static.cmake
solution/src/: backup.cpp  disassemble.hpp  main.cpp  relocation_utils.hpp  section_utils.hpp  symbol_utils.hpp  symbolize.hpp  utils.hpp
src/: another.py  asm.py  main.py  scratch.py  test.py
statement/: a.elf  b-main.objdump  b.elf  index.rst  picolibc.ld
tests/: .gitignore
tests/0a/: min.elf  spec.py
tests/0b/: min_got.elf  spec.py
tests/0c/: min_libc.elf  spec.py
tests/1-examples-a/: a.default-output  a.elf  spec.py
tests/2-question/: question.default-output  question.elf  question.replaced-output  spec.py
tests/3-embench-libedn/: libedn.elf  spec.py
(+3 files in other folders)
